<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Kotatsu</string>
    <string name="local_storage">Local storage</string>
    <string name="favourites">Favorites</string>
    <string name="history">History</string>
    <string name="error_occurred">An error occurred</string>
    <string name="network_error">Network error</string>
    <string name="details">Details</string>
    <string name="chapters">Chapters</string>
    <string name="list">Liste</string>
    <string name="detailed_list">Detailed list</string>
    <string name="grid">Grid</string>
    <string name="list_mode">List mode</string>
    <string name="settings">Settings</string>
    <string name="remote_sources">Manga sources</string>
    <string name="loading_">Loading…</string>
    <string name="computing_">Computing…</string>
    <string name="chapter_d_of_d">Chapter %1$d of %2$d</string>
    <string name="close">Close</string>
    <string name="try_again">Try again</string>
    <string name="retry">Retry</string>
    <string name="clear_history">Clear history</string>
    <string name="nothing_found">Nothing found</string>
    <string name="history_is_empty">No history yet</string>
    <string name="read">Read</string>
    <string name="you_have_not_favourites_yet">No favorites yet</string>
    <string name="add_to_favourites">Favorite this</string>
    <string name="add_new_category">New category</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="share_s">Share %s</string>
    <string name="search">Search</string>
    <string name="search_manga">Search manga</string>
    <string name="manga_downloading_">Downloading…</string>
    <string name="processing_">Processing…</string>
    <string name="download_complete">Downloaded</string>
    <string name="downloads">Downloads</string>
    <string name="by_name">Name</string>
    <string name="popular">Popular</string>
    <string name="updated">Updated</string>
    <string name="newest">Newest</string>
    <string name="by_rating">Rating</string>
    <string name="sort_order">Sorting order</string>
    <string name="filter">Filter</string>
    <string name="saved_filters">Saved filters</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system</string>
    <string name="pages">Pages</string>
    <string name="clear">Clear</string>
    <string name="remove">Remove</string>
    <string name="_s_deleted_from_local_storage">\"%s\" deleted from local storage</string>
    <string name="save_page">Save page</string>
    <string name="page_saved">Page saved</string>
    <string name="pages_saved">Pages saved</string>
    <string name="share_image">Share image</string>
    <string name="_import">Import</string>
    <string name="delete">Delete</string>
    <string name="operation_not_supported">This operation is not supported</string>
    <string name="text_file_not_supported">Either pick a ZIP or CBZ file.</string>
    <string name="no_description">No description</string>
    <string name="clear_pages_cache">Clear page cache</string>
    <string name="text_file_sizes">B|kB|MB|GB|TB</string>
    <string name="standard">Standard</string>
    <string name="webtoon">Webtoon</string>
    <string name="read_mode">Read mode</string>
    <string name="grid_size">Grid size</string>
    <string name="search_on_s">Search on %s</string>
    <string name="delete_manga">Delete manga</string>
    <string name="text_delete_local_manga">Permanently delete \"%s\" from device?</string>
    <string name="reader_settings">Reader settings</string>
    <string name="switch_pages">Switch pages</string>
    <string name="_continue">Continue</string>
    <string name="error">Error</string>
    <string name="clear_thumbs_cache">Clear thumbnails cache</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="search_history_cleared">Cleared</string>
    <string name="internal_storage">Internal storage</string>
    <string name="manga_save_location">Downloads folder</string>
    <string name="clear_updates_feed">Clear updates feed</string>
    <string name="protect_application">Protect the app</string>
    <string name="protect_application_summary">Ask for password when starting Kotatsu</string>
    <string name="black_dark_theme">Black</string>
    <string name="black_dark_theme_summary">Uses less power on AMOLED screens</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="create_backup">Create data backup</string>
    <string name="restore_backup">Restore from backup</string>
    <string name="backup_information">You can create backup of your history and favorites and restore it</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="exclude_nsfw_from_history">Exclude NSFW manga from history</string>
    <string name="screenshots_policy">Screenshot policy</string>
    <string name="suggestions">Suggestions</string>
    <string name="suggestions_enable">Enable suggestions</string>
    <string name="suggestions_summary">Suggest manga based on your preferences</string>
    <string name="suggestions_info">All data is only analyzed locally on this device and never sent anywhere.</string>
    <string name="exclude_nsfw_from_suggestions">Do not suggest NSFW manga</string>
    <string name="pinned_sources_only">Pinned sources only</string>
    <string name="hide_empty_sources">Hide empty sources</string>
    <string name="preload_pages">Preload pages</string>
    <string name="suggestions_excluded_genres">Exclude genres</string>
    <string name="suggestions_excluded_genres_summary">Specify genres that you do not want to see in the suggestions</string>
    <string name="shikimori" translatable="false">Shikimori</string>
    <string name="anilist" translatable="false">AniList</string>
    <string name="download_slowdown">Download slowdown</string>
    <string name="download_slowdown_summary">Helps avoid blocking your IP address</string>
    <string name="sync">Synchronization</string>
    <string name="sync_title">Sync your data</string>
    <string name="name">Name</string>
    <string name="edit">Edit</string>
    <string name="tracking">Tracking</string>
    <string name="dns_over_https">DNS over HTTPS</string>
    <string name="clear_cookies_summary">Can help in case of some issues. All authorizations will be invalidated</string>
    <string name="exit_confirmation_summary">Press "Back" twice to exit the app</string>
    <string name="exit_confirmation">Exit confirmation</string>
    <string name="storage_usage">Storage usage</string>
    <string name="history_shortcuts">Show recent manga shortcuts</string>
    <string name="history_shortcuts_summary">Make recent manga available by long pressing on application icon</string>
    <string name="mal" translatable="false">MyAnimeList</string>
    <string name="prefetch_content">Content preloading</string>
    <string name="language">Language</string>
    <string name="color_theme">Color scheme</string>
    <string name="show_in_grid_view">Show in grid view</string>
    <string name="services">Services</string>
    <string name="sync_settings">Synchronization settings</string>
    <string name="ignore_ssl_errors">Ignore SSL errors</string>
    <string name="mirror_switching">Choose mirror automatically</string>
    <string name="mirror_switching_summary">Automatically switch domains for manga sources on errors if mirrors are available</string>
    <string name="clear_network_cache">Clear network cache</string>
    <string name="type">Type</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="proxy">Proxy</string>
    <string name="kitsu" translatable="false">Kitsu</string>
    <string name="images_proxy_title">Images optimization proxy</string>
    <string name="images_procy_description">Use the wsrv.nl service to reduce traffic usage and speed up image loading if possible</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authorization_optional">Authorization (optional)</string>
    <string name="network">Network</string>
    <string name="data_and_privacy">Data and privacy</string>
    <string name="restore_summary">Restore previously created backup</string>
    <string name="related_manga">Related manga</string>
    <string name="disable_nsfw">Disable NSFW</string>
    <string name="related_manga_summary">Show a list of related manga. In some cases it may be inaccurate or missing</string>
    <string name="periodic_backups">Periodic backups</string>
    <string name="sources_catalog">Sources catalog</string>
    <string name="manage_sources">Manage sources</string>
    <string name="disable_nsfw_summary">Disable NSFW sources and hide adult manga from list if possible</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="reading_time_estimation">Show estimated reading time</string>
    <string name="reading_time_estimation_summary">The time estimation value may be inaccurate</string>
    <string name="reading_stats">Reading statistics</string>
    <string name="delete_read_chapters">Delete read chapters</string>
    <string name="delete_read_chapters_summary">Delete chapters you have already read from local storage to free up space</string>
    <string name="delete_read_chapters_auto">Delete read chapters automatically</string>
    <string name="runs_on_app_start">Runs when the application starts</string>
    <string name="fix">Fix</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="disable">Disable</string>
    <string name="disable_connectivity_check">Disable connectivity check</string>
    <string name="ignore_ssl_errors_summary">You can disable SSL certificates verification in case you face an SSL-related issues when accessing network resources. This may affect your security. Application restarting is required after changing this setting.</string>
    <string name="disable_connectivity_check_summary">Skip the connectivity check in case you have issues with it (e.g. going offline mode even though the network is connected)</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="genre">Genre</string>
    <string name="handle_links">Handle links</string>
    <string name="handle_links_summary">Handle manga links from external applications (e.g. web browser). You may also need to enable it manually in the application\'s system settings</string>
    <string name="author">Author</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_summary">Delete information about manga that is not used</string>
    <string name="enable_all_sources">Enable all manga sources</string>
    <string name="enable_all_sources_summary">All available manga sources will be enabled permanently</string>
    <string name="simple">Simple</string>
    <string name="clear_browser_data">Clear browser data</string>
    <string name="clear_browser_data_summary">Clear browser data such as cache and cookies. Warning: Authorization in manga sources may become invalid</string>
    <string name="tags_warnings">Highlight dangerous genres</string>
    <string name="tags_warnings_summary">Highlight genres that may be inappropriate for most users</string>
    <string name="incognito_for_nsfw">Incognito mode for NSFW manga</string>
    <string name="adblock">Block ads in browser</string>
    <string name="adblock_summary">Block advertisement in the built-in browser (beta)</string>
    <string name="data_removal">Data removal</string>
</resources>