<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/data_removal">

	<Preference
		android:key="search_history_clear"
		android:persistent="false"
		android:summary="@string/loading_"
		android:title="@string/clear_search_history"
		app:allowDividerAbove="true" />

	<Preference
		android:key="updates_feed_clear"
		android:persistent="false"
		android:summary="@string/loading_"
		android:title="@string/clear_updates_feed" />

	<Preference
		android:key="thumbs_cache_clear"
		android:persistent="false"
		android:summary="@string/computing_"
		android:title="@string/clear_thumbs_cache" />

	<Preference
		android:key="pages_cache_clear"
		android:persistent="false"
		android:summary="@string/computing_"
		android:title="@string/clear_pages_cache" />

	<Preference
		android:key="http_cache_clear"
		android:persistent="false"
		android:summary="@string/loading_"
		android:title="@string/clear_network_cache" />

	<Preference
		android:key="manga_data_clear"
		android:persistent="false"
		android:summary="@string/clear_database_summary"
		android:title="@string/clear_database" />

	<Preference
		android:key="cookies_clear"
		android:persistent="false"
		android:summary="@string/clear_cookies_summary"
		android:title="@string/clear_cookies" />

	<Preference
		android:key="webview_clear"
		android:persistent="false"
		android:summary="@string/clear_browser_data_summary"
		android:title="@string/clear_browser_data" />

	<Preference
		android:key="chapters_clear"
		android:persistent="false"
		android:summary="@string/delete_read_chapters_summary"
		android:title="@string/delete_read_chapters"
		app:allowDividerAbove="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="chapters_clear_auto"
		android:summary="@string/runs_on_app_start"
		android:title="@string/delete_read_chapters_auto" />

</PreferenceScreen>
