<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:title="@string/data_and_privacy">

	<SwitchPreferenceCompat
		android:key="protect_app"
		android:persistent="false"
		android:summary="@string/protect_application_summary"
		android:title="@string/protect_application" />

	<ListPreference
		android:defaultValue="allow"
		android:entries="@array/screenshots_policy"
		android:key="screenshots_policy"
		android:title="@string/screenshots_policy"
		app:useSimpleSummaryProvider="true" />

	<ListPreference
		android:entries="@array/incognito_nsfw_options"
		android:key="incognito_nsfw"
		android:title="@string/incognito_for_nsfw"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="dynamic_shortcuts"
		android:summary="@string/history_shortcuts_summary"
		android:title="@string/history_shortcuts" />

	<MultiSelectListPreference
		android:key="search_suggest_types"
		android:title="@string/search_suggestions" />

	<PreferenceCategory android:title="@string/backup_restore">

		<Preference
			android:key="backup"
			android:persistent="false"
			android:summary="@string/backup_information"
			android:title="@string/create_backup" />

		<Preference
			android:key="restore"
			android:persistent="false"
			android:summary="@string/restore_summary"
			android:title="@string/restore_backup" />

		<PreferenceScreen
			android:fragment="org.koitharu.kotatsu.settings.backup.PeriodicalBackupSettingsFragment"
			android:key="backup_periodic"
			android:persistent="false"
			android:title="@string/periodic_backups" />

	</PreferenceCategory>

	<PreferenceScreen
		android:fragment="org.koitharu.kotatsu.settings.userdata.storage.StorageManageSettingsFragment"
		android:key="storage_usage"
		android:title="@string/storage_usage"
		app:allowDividerAbove="true" />

</PreferenceScreen>
