<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<ListPreference
		android:defaultValue="-1"
		android:entries="@array/themes"
		android:entryValues="@array/values_theme"
		android:key="theme"
		android:title="@string/theme"
		app:useSimpleSummaryProvider="true" />

	<org.koitharu.kotatsu.settings.utils.ThemeChooserPreference
		android:key="color_theme"
		android:title="@string/color_theme"
		app:isPreferenceVisible="@bool/is_color_themes_available" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="amoled_theme"
		android:summary="@string/black_dark_theme_summary"
		android:title="@string/black_dark_theme" />

	<org.koitharu.kotatsu.settings.utils.ActivityListPreference
		android:key="app_locale"
		android:title="@string/language"
		app:allowDividerAbove="true" />

	<ListPreference
		android:key="date_format"
		android:title="@string/date_format" />

	<ListPreference
		android:entries="@array/list_modes"
		android:key="list_mode_2"
		android:title="@string/list_mode"
		app:useSimpleSummaryProvider="true" />

	<org.koitharu.kotatsu.settings.utils.SliderPreference
		android:key="grid_size"
		android:stepSize="5"
		android:title="@string/grid_size"
		android:valueFrom="50"
		android:valueTo="150"
		app:defaultValue="100" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="exit_confirm"
		android:summary="@string/exit_confirmation_summary"
		android:title="@string/exit_confirmation"
		app:allowDividerAbove="true" />

	<SwitchPreferenceCompat
		android:key="protect_app"
		android:persistent="false"
		android:summary="@string/protect_application_summary"
		android:title="@string/protect_application" />

</PreferenceScreen>
