<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceScreen
		android:fragment="org.koitharu.kotatsu.settings.sources.SourcesSettingsFragment"
		android:key="remote_sources"
		android:title="@string/remote_sources" />

	<PreferenceScreen
		android:fragment="org.koitharu.kotatsu.settings.SuggestionsSettingsFragment"
		android:key="suggestions"
		android:persistent="false"
		android:title="@string/suggestions" />

	<ListPreference
		android:entries="@array/doh_providers"
		android:key="doh"
		android:title="@string/dns_over_https"
		app:useSimpleSummaryProvider="true" />

	<Preference
		android:key="local_storage"
		android:persistent="false"
		android:title="@string/manga_save_location"
		app:allowDividerAbove="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="downloads_slowdown"
		android:summary="@string/download_slowdown_summary"
		android:title="@string/download_slowdown" />

	<org.koitharu.kotatsu.settings.utils.SliderPreference
		android:key="downloads_parallelism"
		android:stepSize="1"
		android:title="@string/parallel_downloads"
		android:valueFrom="1"
		android:valueTo="5"
		app:defaultValue="2" />

	<Preference
		android:key="sync"
		android:persistent="false"
		android:summary="@string/sync_title"
		android:title="@string/sync" />

	<PreferenceScreen
		android:fragment="org.koitharu.kotatsu.settings.backup.BackupSettingsFragment"
		android:title="@string/backup_restore" />

</PreferenceScreen>