<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<ListPreference
		android:defaultValue="0"
		android:entries="@array/network_policy"
		android:entryValues="@array/values_network_policy"
		android:key="prefetch_content"
		android:title="@string/prefetch_content"
		app:isPreferenceVisible="false"
		app:useSimpleSummaryProvider="true"
		tools:isPreferenceVisible="true" />

	<ListPreference
		android:defaultValue="2"
		android:entries="@array/network_policy"
		android:entryValues="@array/values_network_policy"
		android:key="pages_preload"
		android:title="@string/preload_pages"
		app:useSimpleSummaryProvider="true" />

	<PreferenceScreen
		android:fragment="org.koitharu.kotatsu.settings.ProxySettingsFragment"
		android:key="proxy"
		android:title="@string/proxy"
		app:allowDividerAbove="true" />

	<ListPreference
		android:entries="@array/doh_providers"
		android:key="doh"
		android:title="@string/dns_over_https"
		app:useSimpleSummaryProvider="true" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="images_proxy"
		android:summary="@string/images_procy_description"
		android:title="@string/images_proxy_title" />

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="mirror_switching"
		android:summary="@string/mirror_switching_summary"
		android:title="@string/mirror_switching" />

	<SwitchPreferenceCompat
		android:key="ssl_bypass"
		android:title="@string/ignore_ssl_errors" />

</PreferenceScreen>
