<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_share"
		android:icon="?actionModeShareDrawable"
		android:title="@string/share"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_remove"
		android:icon="@drawable/ic_delete"
		android:title="@string/remove"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_save"
		android:icon="@drawable/ic_save"
		android:title="@string/save"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_favourite"
		android:icon="@drawable/ic_heart_outline"
		android:title="@string/add_to_favourites"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_fix"
		android:icon="@drawable/ic_auto_fix"
		android:title="@string/fix"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_edit_override"
		android:icon="@drawable/ic_edit"
		android:title="@string/edit"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_mark_current"
		android:icon="@drawable/ic_eye_check"
		android:title="@string/mark_as_completed"
		app:showAsAction="ifRoom|withText" />

</menu>
