<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<SwitchPreferenceCompat
		android:defaultValue="false"
		android:key="suggestions"
		android:summary="@string/suggestions_summary"
		android:title="@string/suggestions_enable" />

	<org.koitharu.kotatsu.settings.utils.MultiAutoCompleteTextViewPreference
		android:dependency="suggestions"
		android:key="suggestions_exclude_tags"
		android:summary="@string/suggestions_excluded_genres_summary"
		android:title="@string/suggestions_excluded_genres" />

	<SwitchPreferenceCompat
		android:dependency="suggestions"
		android:key="suggestions_exclude_nsfw"
		android:title="@string/exclude_nsfw_from_suggestions" />

	<Preference
		android:icon="@drawable/ic_info_outline"
		android:key="track_warning"
		android:persistent="false"
		android:selectable="false"
		android:summary="@string/suggestions_info"
		app:allowDividerAbove="true" />

</PreferenceScreen>