<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_disable"
		android:icon="@drawable/ic_eye_off"
		android:title="@string/disable"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_delete"
		android:icon="@drawable/ic_delete"
		android:title="@string/delete"
		android:visible="false"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_pin"
		android:icon="@drawable/ic_pin"
		android:title="@string/pin"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_unpin"
		android:icon="@drawable/ic_unpin"
		android:title="@string/unpin"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_shortcut"
		android:icon="@drawable/ic_shortcut"
		android:title="@string/create_shortcut"
		app:showAsAction="ifRoom|withText" />

	<item
		android:id="@+id/action_settings"
		android:icon="@drawable/ic_settings"
		android:title="@string/settings"
		app:showAsAction="ifRoom|withText" />
</menu>
